# splunk-mcp

./: .env.example  .gitignore  .mcp.json  EXAMPLE_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
addons/: README.md
src/splunk_mcp/: __init__.py  client.py  config.py  server.py
src/splunk_mcp/tools/: __init__.py  apps.py  dashboards.py  hec.py  indexes.py  inputs.py  kvstore.py  raw.py  search.py  system.py  telemetry.py  users.py
tests/: smoke_test.py  test_client_unit.py
